--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
+    <uses-sdk
+        android:minSdkVersion="14"
+        android:targetSdkVersion="18" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,7 +15,7 @@
         android:theme="@style/AppTheme" >
         <!-- Splash screen -->
         <activity
-            android:name="SplashScreen"
+            android:name="edu.auburn.eng.csse.comp3710.pjf0001.snmprint.SplashScreen"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Black.NoTitleBar" >
@@ -23,13 +27,8 @@
         </activity>
 
         <activity
-            android:name=".MainActivity"
+            android:name="edu.auburn.eng.csse.comp3710.pjf0001.snmprint.MainActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".UserSettingActivity"/>
     </application>
