--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
             android:label="@string/app_name" >
         </activity>
         <activity android:name=".UserSettingActivity"/>
+        <activity android:name=".AddPrinterActivity"/>
     </application>
 
 </manifest>
