--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="edu.auburn.eng.csse.comp3710.pjf0001.snmprint" >
 
     <uses-permission android:name="android.permission.INTERNET"/>
-
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="18" />
@@ -11,27 +10,37 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
+        android:logo="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <!-- Splash screen -->
         <activity
             android:name="edu.auburn.eng.csse.comp3710.pjf0001.snmprint.SplashScreen"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Black.NoTitleBar" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
 
         <activity
             android:name="edu.auburn.eng.csse.comp3710.pjf0001.snmprint.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
+
         </activity>
+
         <activity android:name=".UserSettingActivity"/>
-        <activity android:name=".printerController"/>
+        <activity android:name=".printerController">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="edu.auburn.eng.csse.comp3710.pjf0001.snmprint.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
